[package]
name = "paintbrush"
version = "0.1.0"
authors = ["Bombfuse <eiffeldud@gmail.com>"]
edition = "2018"
description = "A crate for using colors easily."
repository = "https://github.com/Bombfuse/paintbrush"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
